# aimibotV2

./: CMakeLists.txt  README.md  package.xml
include/aimibot/: UltrasnoicObstacle.h  aimibot.hpp  data_struct.hpp  diff_driver.hpp  message_callback.hpp  move.h  movecircular.h  odometry.hpp
launch/: UltrasnoicObstacle.launch  amcl_demo.launch  keyboard_teleop.launch  logitech_teleop.launch  ls01B_gmapping_demo.launch  ls01B_laser.launch  mapping.launch  minimal.launch  move_demo.launch  movecircular.launch  navigation_demo.launch  rtabmap_local.launch  rtabmap_remote_robot.launch  test.launch  velocity_smoother.launch.xml
launch/config/: rtabmap_rvizcfg.rviz  turtlebot_navigation.rviz
launch/includes/: move_base.launch.xml  teleop_vel.launch.xml
msg/: Cliff.msg  ControllerInfo.msg  CoreSensors.msg  DigitalOutput.msg  DockInfraRed.msg  GpInput.msg  Inertia.msg  Led.msg  MotorPower.msg  Sound.msg  ThreeAxisGyro.msg  Ultrasonic.msg  UniqueDeviceID.msg  hardware.msg
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  smoother.yaml  teleop_mux.yaml
rviz/: navigation.rviz
scripts/: aimibot_teleop_key
src/: UltrasnoicObstacle.cpp  aimibot_joy.cpp  diff_driver.cpp  main.cpp  message_callback.cpp  move.cpp  movecircular.cpp  odometry.cpp  qua.cpp
